# BodySlide-and-Outfit-Studio

./: .clang-format  .gitignore  .gitmodules  AABBTree.cpp  Anim.cpp  Anim.h  AppControl.cpp  AppControl.h  AsyncMonitor.cpp  AsyncMonitor.h  Automorph.cpp  Automorph.h  BS_OS.sln  BodySlide.aps  BodySlide.cpp  BodySlide.rc  BodySlide.sln  BodySlide.vcproj  BodySlide.vcxproj  BodySlide.vcxproj.filters  BodySlide.vcxproj.filters.orig  BodySlide.vcxproj.orig  BodySlide.xml  BodySlideApp.cpp  BodySlideApp.h  BuildSelection.xml  CMakeLists.txt  CONTRIBUTING.md  Config.xml  ConfigurationManager.cpp  ConfigurationManager.h  DDS.h  DiffData.cpp  DiffData.h  FBXWrangler.cpp  FBXWrangler.h  FSBSA.cpp  FSBSA.h  FSEngine.cpp  FSEngine.h  (+81 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Debug/: Config.xml
Debug/res/: BodyslideFrame.xrc  GroupManager.xrc  SkeletonBlank.nif  dlgMoveShape.xrc  nocolorvshader.vs  outfitStudio.xrc  skeleton_female_xpmse.nif  skeleton_fo3nv.nif
Release/: Config.xml
Release XP/res/: skeleton_female_xpmse.nif  skinshader.fs
Release/res/: BodyslideFrame.xrc  outfitStudio.xrc  skeleton_female_xpmse.nif
gli/: comparison.hpp  duplicate.hpp  dx.hpp  gl.hpp  levels.hpp  load_dds.hpp  load_kmg.hpp  load_ktx.hpp
gli/core/: dx.inl  gl.inl  load_dds.inl
lang/: BodySlide.pot  xrctext.cpp
lang/de/: BodySlide.mo  BodySlide.po
lang/fr/: BodySlide.mo  BodySlide.po
lang/ru/: BodySlide.po
lang/tr/: BodySlide.mo  BodySlide.po
lang/zh/: BodySlide.mo  BodySlide.po
lib/: DDS.h  half.hpp
lib/FSEngine/: FSBSA.cpp  FSBSA.h  FSManager.cpp  FSManager.h
lib/LZ4F/: lz4frame.c  lz4frame.h
lib/NIF/: Animation.cpp  Animation.h  BasicTypes.cpp  BasicTypes.h  ExtraData.cpp  ExtraData.h  Factory.cpp  Factory.h  Geometry.cpp  Geometry.h  Keys.h  NifFile.cpp  NifFile.h  NifUtil.h  Nodes.cpp  Nodes.h  Objects.cpp  Objects.h  Particles.cpp  Particles.h  Shaders.cpp  Shaders.h  Skin.cpp  Skin.h  VertexData.h  bhk.cpp  bhk.h
lib/NIF/utils/: KDMatcher.h  Miniball.hpp  Object3d.cpp  Object3d.h  half.hpp
lib/SOIL2/: SOIL2.c  stb_image_write.h
lib/TinyXML-2/: tinyxml2.cpp  tinyxml2.h
lib/gli/: dx.hpp  file.hpp  generate_mipmaps.hpp  image.hpp  load.hpp
lib/gli/core/: dx.inl  file.inl  flip.inl  format.inl  load.inl  load_dds.inl  load_kmg.inl  load_ktx.inl  save_dds.inl  save_kmg.inl  save_ktx.inl
res/: BodyslideFrame.xrc  GameObjectBlank.nif  Maya FBX FO4 Fix.txt  Maya FBX Skyrim Fix.txt  SkeletonBlank.nif  SkeletonBlank_fo4.nif  SkeletonBlank_sk.nif  SkeletonBlank_sse.nif  defvshader.vs  maskvshader.vs  outfitStudio.xrc  skeleton_female_sf.nif  skeleton_female_sk.nif  skeleton_female_sse.nif  skeleton_female_vanilla.nif  skeleton_female_xpms.nif  skeleton_fo3nv.nif  skeleton_fo4.nif  skeleton_male_sf.nif  skeleton_male_sk.nif  skeleton_male_sse.nif  skeleton_ob.nif
res/shaders/: default.frag  default.vert  fo4_default.frag  fo4_default.vert  fullscreentri.frag  fullscreentri.vert  mask.vert  normalshade.frag  normalshade.vert  ob_default.frag  ob_default.vert  primitive.frag  primitive.vert  skin.frag
res/xrc/: About.xrc  Actions.xrc  BatchBuild.xrc  BodySlide.xrc  ConvertBodyReference.xrc  EditUV.xrc  FBXImport.xrc  GroupManager.xrc  ImportDialog.xrc  NormalsGenDlg.xrc  OutfitStudio.xrc  Project.xrc  SavePreset.xrc  Settings.xrc  Setup.xrc  ShapeProperties.xrc  Skeleton.xrc  Slider.xrc  SliderDataImport.xrc
src/components/: Anim.cpp  Anim.h  Automorph.cpp  Automorph.h  BuildSelection.cpp  BuildSelection.h  DiffData.cpp  DiffData.h  Mesh.cpp  Mesh.h  NormalGenLayers.cpp  NormalGenLayers.h  PoseData.cpp  PoseData.h  RefTemplates.cpp  RefTemplates.h  SliderCategories.cpp  SliderCategories.h  SliderData.cpp  SliderData.h  SliderGroup.cpp  SliderGroup.h  SliderManager.cpp  SliderManager.h  SliderPresets.cpp  SliderPresets.h  SliderSet.cpp  SliderSet.h  TweakBrush.cpp  TweakBrush.h  UndoHistory.cpp  UndoHistory.h  UndoState.h  WeightNorm.cpp  WeightNorm.h
src/files/: FBXWrangler.cpp  FBXWrangler.h  MaterialFile.cpp  MaterialFile.h  NifBlock.cpp  NifBlock.h  NifFile.cpp  NifFile.h  ObjFile.cpp  ObjFile.h  ResourceLoader.cpp  ResourceLoader.h  SFMorphFile.cpp  SFMorphFile.h  TriFile.cpp  TriFile.h  wxDDSImage.cpp  wxDDSImage.h
src/program/: BodySlideApp.cpp  BodySlideApp.h  ConvertBodyReferenceDialog.cpp  ConvertBodyReferenceDialog.h  EditUV.cpp  EditUV.h  FBXImportDialog.cpp  FBXImportDialog.h  FBXImportOptions.h  GroupManager.cpp  GroupManager.h  NormalGenLayers.cpp  NormalGenLayers.h  NormalsGenDialog.cpp  NormalsGenDialog.h  OBJImportOptions.h  ObjImportDialog.cpp  ObjImportDialog.h  OutfitProject.cpp  OutfitProject.h  OutfitStudio.cpp  OutfitStudio.h  PresetSaveDialog.cpp  PresetSaveDialog.h  PreviewWindow.cpp  PreviewWindow.h  ShapeProperties.cpp  ShapeProperties.h  SliderDataImportDialog.cpp  SliderDataImportDialog.h  baseNormalsOptDlg.cpp  baseNormalsOptDlg.h
src/render/: GLCanvas.cpp  GLCanvas.h  GLDialog.cpp  GLDialog.h  GLExtensions.cpp  GLExtensions.h  GLMaterial.cpp  GLMaterial.h  GLOffscreenBuffer.cpp  GLOffscreenBuffer.h  GLShader.cpp  GLShader.h  GLSurface.cpp  GLSurface.h
src/ui/: wxBrushSettingsPopup.cpp  wxBrushSettingsPopup.h  wxDummySliderPanel.cpp  wxDummySliderPanel.h  wxNormalsGenDlg.cpp  wxNormalsGenDlg.h  wxSliderPanel.cpp  wxSliderPanel.h  wxStateButton.cpp  wxStateButton.h  wxSubSliderPanel.cpp  wxSubSliderPanel.h
src/utils/: AABBTree.cpp  AABBTree.h  ConfigDialogUtil.h  ConfigurationManager.cpp  ConfigurationManager.h  KDMatcher.h  Log.cpp  Log.h  Object3d.cpp  Object3d.h  PlatformUtil.cpp  PlatformUtil.h  StringStuff.cpp  StringStuff.h
work/: NIFfile2.bt  OutfitStudio.xcf  Thumbs.db  outfitstudioicon.ZBR
